--- a/docs/conf.py.in
+++ b/docs/conf.py.in
@@ -71,7 +71,7 @@ for key in substs.keys():
 
 # Add any paths that contain templates here, relative to this directory.
 templates_path = ['_templates']
-source_suffix = '.rst'
+source_suffix = ['.rst', '.trst']
 master_doc = 'index'
 
 # General information about the project.
